--- a/Quiz/Base.lproj/Main.storyboard
+++ b/Quiz/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,19 +15,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJa-ob-iiH">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJa-ob-iiH">
                                 <rect key="frame" x="20" y="349" width="374" height="172"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="172" id="omj-BX-ozN"/>
+                                    <constraint firstAttribute="height" constant="172" id="dhX-Sl-acu"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qtf-x2-pOB">
-                                <rect key="frame" x="118" y="268" width="178" height="73"/>
+                                <rect key="frame" x="127" y="268" width="160" height="73"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="73" id="msf-P9-oqn"/>
+                                    <constraint firstAttribute="height" constant="73" id="zqt-Hp-Aqq"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <state key="normal" title="Next Question"/>
@@ -35,19 +35,16 @@
                                     <action selector="showNextQuestion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lgf-DF-MKf"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QdC-g9-pBf">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QdC-g9-pBf">
                                 <rect key="frame" x="20" y="84" width="374" height="176"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="176" id="KVv-eV-nvd"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Im7-ca-Nsv">
-                                <rect key="frame" x="118" y="529" width="178" height="71"/>
+                                <rect key="frame" x="130" y="529" width="154" height="71"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="71" id="iPw-aP-bgl"/>
+                                    <constraint firstAttribute="height" constant="71" id="wjv-Qh-xd8"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <state key="normal" title="Show Answer"/>
@@ -58,18 +55,17 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="QdC-g9-pBf" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="2zI-gN-9Sf"/>
-                            <constraint firstItem="QdC-g9-pBf" firstAttribute="leading" secondItem="LJa-ob-iiH" secondAttribute="leading" id="44q-zS-GYG"/>
-                            <constraint firstItem="QdC-g9-pBf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="4Rg-1u-Wq4"/>
-                            <constraint firstItem="LJa-ob-iiH" firstAttribute="top" secondItem="Qtf-x2-pOB" secondAttribute="bottom" constant="8" id="DnD-xw-Hee"/>
-                            <constraint firstItem="Im7-ca-Nsv" firstAttribute="top" secondItem="LJa-ob-iiH" secondAttribute="bottom" constant="8" id="Eab-xB-5aS"/>
-                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="centerX" secondItem="QdC-g9-pBf" secondAttribute="centerX" id="IOi-XQ-V7X"/>
-                            <constraint firstItem="QdC-g9-pBf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="RYP-zy-Zd3"/>
-                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="top" secondItem="QdC-g9-pBf" secondAttribute="bottom" constant="8" id="TwH-3Y-hnd"/>
-                            <constraint firstItem="Im7-ca-Nsv" firstAttribute="centerX" secondItem="QdC-g9-pBf" secondAttribute="centerX" id="aFE-G8-6NE"/>
-                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="118" id="iro-oY-9hT"/>
-                            <constraint firstItem="LJa-ob-iiH" firstAttribute="centerX" secondItem="QdC-g9-pBf" secondAttribute="centerX" id="pCx-Uz-tqC"/>
-                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="leading" secondItem="Im7-ca-Nsv" secondAttribute="leading" id="zqe-Dn-Yq9"/>
+                            <constraint firstItem="LJa-ob-iiH" firstAttribute="top" secondItem="Qtf-x2-pOB" secondAttribute="bottom" constant="8" id="HXN-wF-Jxe"/>
+                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Hut-gD-oIX"/>
+                            <constraint firstItem="QdC-g9-pBf" firstAttribute="leading" secondItem="LJa-ob-iiH" secondAttribute="leading" id="NCD-ea-24B"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Im7-ca-Nsv" secondAttribute="bottom" constant="262" id="Uv8-yc-04z"/>
+                            <constraint firstItem="QdC-g9-pBf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="WQc-1P-6eR"/>
+                            <constraint firstItem="Im7-ca-Nsv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bWV-Q6-GQv"/>
+                            <constraint firstItem="QdC-g9-pBf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="f5I-tz-EgC"/>
+                            <constraint firstItem="Im7-ca-Nsv" firstAttribute="top" secondItem="LJa-ob-iiH" secondAttribute="bottom" constant="8" id="feg-6t-8L2"/>
+                            <constraint firstItem="QdC-g9-pBf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gte-kv-fjf"/>
+                            <constraint firstItem="LJa-ob-iiH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hZ9-cq-0t0"/>
+                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="top" secondItem="QdC-g9-pBf" secondAttribute="bottom" constant="8" id="ngm-2P-MCh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
