--- a/Quiz/Base.lproj/Main.storyboard
+++ b/Quiz/Base.lproj/Main.storyboard
@@ -15,57 +15,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJa-ob-iiH">
-                                <rect key="frame" x="20" y="349" width="374" height="172"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LJa-ob-iiH">
+                                <rect key="frame" x="20" y="327" width="374" height="175"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="172" id="dhX-Sl-acu"/>
+                                    <constraint firstAttribute="width" secondItem="LJa-ob-iiH" secondAttribute="height" multiplier="16:7" constant="-26" id="ook-lV-gE7"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qtf-x2-pOB">
-                                <rect key="frame" x="127" y="268" width="160" height="73"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="73" id="zqt-Hp-Aqq"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <state key="normal" title="Next Question"/>
-                                <connections>
-                                    <action selector="showNextQuestion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lgf-DF-MKf"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QdC-g9-pBf">
-                                <rect key="frame" x="20" y="84" width="374" height="176"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Im7-ca-Nsv">
-                                <rect key="frame" x="130" y="529" width="154" height="71"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="71" id="wjv-Qh-xd8"/>
-                                </constraints>
+                                <rect key="frame" x="130" y="510" width="154" height="44"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <state key="normal" title="Show Answer"/>
                                 <connections>
                                     <action selector="showAnswer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3G4-mA-kgx"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qtf-x2-pOB">
+                                <rect key="frame" x="127" y="275" width="160" height="44"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <state key="normal" title="Next Question"/>
+                                <connections>
+                                    <action selector="showNextQuestion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lgf-DF-MKf"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QdC-g9-pBf">
+                                <rect key="frame" x="20" y="44" width="374" height="183"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="QdC-g9-pBf" secondAttribute="height" multiplier="16:7" constant="-44.285714285714278" id="Nqr-13-EqE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="LJa-ob-iiH" firstAttribute="top" secondItem="Qtf-x2-pOB" secondAttribute="bottom" constant="8" id="HXN-wF-Jxe"/>
-                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Hut-gD-oIX"/>
-                            <constraint firstItem="QdC-g9-pBf" firstAttribute="leading" secondItem="LJa-ob-iiH" secondAttribute="leading" id="NCD-ea-24B"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Im7-ca-Nsv" secondAttribute="bottom" constant="262" id="Uv8-yc-04z"/>
-                            <constraint firstItem="QdC-g9-pBf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="WQc-1P-6eR"/>
-                            <constraint firstItem="Im7-ca-Nsv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bWV-Q6-GQv"/>
-                            <constraint firstItem="QdC-g9-pBf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="f5I-tz-EgC"/>
-                            <constraint firstItem="Im7-ca-Nsv" firstAttribute="top" secondItem="LJa-ob-iiH" secondAttribute="bottom" constant="8" id="feg-6t-8L2"/>
-                            <constraint firstItem="QdC-g9-pBf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gte-kv-fjf"/>
-                            <constraint firstItem="LJa-ob-iiH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hZ9-cq-0t0"/>
-                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="top" secondItem="QdC-g9-pBf" secondAttribute="bottom" constant="8" id="ngm-2P-MCh"/>
+                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1f0-rN-WVh"/>
+                            <constraint firstItem="QdC-g9-pBf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3ES-du-thw"/>
+                            <constraint firstItem="LJa-ob-iiH" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.75" constant="63.5" id="Ncs-l2-9Fr"/>
+                            <constraint firstItem="LJa-ob-iiH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RVE-Di-egO"/>
+                            <constraint firstItem="Qtf-x2-pOB" firstAttribute="top" secondItem="QdC-g9-pBf" secondAttribute="bottom" constant="48" id="Ss7-Cd-1bO"/>
+                            <constraint firstItem="QdC-g9-pBf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" multiplier="0.25" constant="33" id="UNK-vv-W9J"/>
+                            <constraint firstItem="LJa-ob-iiH" firstAttribute="top" secondItem="Qtf-x2-pOB" secondAttribute="bottom" constant="8" id="V4m-0I-8Ix"/>
+                            <constraint firstItem="Im7-ca-Nsv" firstAttribute="top" secondItem="LJa-ob-iiH" secondAttribute="bottom" constant="8" id="b0p-hN-dRn"/>
+                            <constraint firstItem="QdC-g9-pBf" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.75" constant="63.5" id="lAt-Ms-Wic"/>
+                            <constraint firstItem="Im7-ca-Nsv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zPA-FY-T04"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
